export const snapshot = {};

snapshot[`Issue Update Command - Help Text 1`] = `
stdout:
"
Usage: update <issue>

Writes: true

Description:

  Update an issue by UUID, identifier (e.g. ENG-123), number in the configured team, or Linear URL; verify fields with up to 3 reads without repeating
  the write                                                                                                                                           
                                                                                                                                                      
  For API Markdown bodies, prefer a bare Linear URL for mentions.                                                                                     
  Named profile links can also mention people; \`@name\` handling varies by body.                                                                       
  Get a person's canonical \`url\` from                                                                                                                 
  \`linear team members <TEAM> --json\` or \`linear user list --json\`.                                                                                   
  Run \`linear guide markdown\` for mentions, collapsible sections and rewrite risks.                                                                   

Options:

  -h, --help                         - Show this help.                                                                                               
  -a, --assignee      <assignee>     - Assignee (user UUID, username, name, email, 'self', or '@me')                                                 
  --unassign                         - Clear the issue's assignee (cannot be combined with --assignee)                                               
  --due-date          <date>         - Due date of the issue                                                                                         
  --parent            <issue>        - Parent issue (UUID, identifier, number in the configured team, or Linear URL)                                 
  -p, --priority      <priority>     - Priority (0/none, 1/urgent, 2/high, 3/medium, 4/low; names are case-insensitive)                              
  --estimate          <estimate>     - Points estimate of the issue                                                                                  
  -d, --description   <description>  - Description of the issue (empty string clears it)                                                             
  --description-file  <path>         - Read UTF-8 description from a file (- for stdin; preferred for markdown content)                              
  -l, --label         <label>        - Replace all issue labels (UUID or name). May be repeated.                                                     
  --add-label         <label>        - Add an issue label (UUID or name) without replacing existing labels. May be repeated.                         
  --remove-label      <label>        - Remove an issue label (UUID or name) without replacing other labels. May be repeated.                         
  --team              <team>         - Move the issue to this team (UUID or key); Linear may also move child issues                                  
  --project           <project>      - Project to assign the issue to (UUID, slug ID, or name)                                                       
  --clear-project                    - Remove the issue from its project and clear its milestone (cannot be combined with --project or --milestone)  
  -s, --state         <state>        - Workflow state for the issue (UUID, name, or type). A canceled-type or duplicate state first prints the       
                                       issue's context (sub-issues, relations, comments and changes by other accounts) on stderr without blocking    
  --milestone         <milestone>    - Project milestone (UUID, or name when --project is set or the issue already has a project)                    
  --cycle             <cycle>        - Cycle name, number, 'active'/'now', 'next', 'previous', or a relative offset like +1 (use --cycle=-1 for      
                                       negatives). Use --clear-cycle to remove the issue from its cycle                                              
  --clear-cycle                      - Remove the issue from its cycle                                                                               
  -t, --title         <title>        - Title of the issue                                                                                            
  --base-file         <path>         - Saved view --json output from before editing; compare original values before writing                          
  --unprotected                      - Skip original-value comparison; domain checks still apply                                                     
  --expect-field      <field>        - Require this API field to match the saved original value (repeatable)                                         
  -j, --json                         - Output data.issue plus top-level verification and readBack after a write                                      

"
stderr:
""
`;

snapshot[`Issue Update Command - Happy Path 1`] = `
stdout:
"✓ Updated issue ENG-123: Updated authentication bug fix
https://linear.app/test-team/issue/ENG-123/updated-authentication-bug-fix
"
stderr:
""
`;

snapshot[`Issue Update Command - Alphanumeric Team Key 1`] = `
stdout:
"✓ Updated issue PLA4-16916: Test Issue
https://linear.app/test-team/issue/PLA4-16916/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Milestone 1`] = `
stdout:
"✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Case Insensitive Label Matching 1`] = `
stdout:
"✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Short Flag -p Is Priority 1`] = `
stdout:
"✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Cycle 1`] = `
stdout:
"✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Project UUID 1`] = `
stdout:
"✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Milestone UUID (no --project required) 1`] = `
stdout:
"✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Unknown State Lists Valid States 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Workflow state not found: 'Nope' for team ENG
  Valid states: \\"Todo\\" (unstarted), \\"In Progress\\" (started), \\"Done\\" (completed). Run \`linear team states ENG\` to list them.
"
`;

snapshot[`Issue Update Command - Unassign Clears Assignee 1`] = `
stdout:
"✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Unassign With Other Fields 1`] = `
stdout:
"✓ Updated issue ENG-123: Renamed
https://linear.app/test-team/issue/ENG-123/renamed
"
stderr:
""
`;

snapshot[`Issue Update Command - Assignee Still Sends User Id 1`] = `
stdout:
"✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Assignee And Unassign Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot specify both --assignee and --unassign
  Use --assignee <user> to set an assignee, or --unassign on its own to clear it.
"
`;

snapshot[`Issue Update Command - Clear Cycle Sends Null 1`] = `
stdout:
"✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Cycle Next Resolves Via Flag 1`] = `
stdout:
"✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Cycle Relative Offset 1`] = `
stdout:
"✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Cycle Lookup Paginates 1`] = `
stdout:
"✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;
